[package]
name = "slidevid"
version = "0.1.0"
authors = ["Ronen Ulanovsky <ronen.ulanovsky.5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
ffmpeg = { version = "4", package = "ffmpeg-next" }
ffmpeg-sys = { version = "4", package = "ffmpeg-sys-next", default-features = false }
anyhow = "1"
